# crmodels-pref

./: README.md
crmodels2-2.0.15/: LICENSE.doc  Makefile  Makefile.in  atom_store.cc  atom_store.h  build-mingw32.sh  clasp-fe.cc  compile-flags.h  config.h  config.h.in  config.status  configure  configure.in  cr2.cc  cr2.h  crlist.cc  crlist.h  crmodels-convert.sh  crmodels2.cc  crmodels2.h  debug.cc  debug.h  evgenii1.cr  evgenii2.cr  evgenii2.hr  evgenii3.cr  extended_data.cc  extended_data.h  fileutils.cc  fileutils.h  filter_crrules.cc  filter_crrules.h  generator.cc  generator.h  hash.cc  hash.h  hide-NO  hide-NO.cut  hide-YES  hide-YES.cut  (+21 more)
crmodels2-2.0.15/tests/: alt-transitivity.lp  exclusivity.gr  exclusivity.hr  exclusivity.lp  exclusivity2.gr  exclusivity2.hr  non-transitive.lp  three_rules.gr  x.gr  x.hr  x.lp
